Fixed unwanted box shadow effect visible on nm-applet menu

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -14,6 +14,12 @@ menu {
     border-radius: 12px; 
 }
 
+window.popup decoration {
+    box-shadow: none;
+    border: none;
+}
+
+
 
 
 window#waybar {
